Remove print statements